--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply m-0 font-sans antialiased bg-gray-50 overflow-x-hidden;
+    @apply m-0 font-sans antialiased bg-gray-50 dark:bg-gray-900 overflow-x-hidden;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
